# ComplexHeatmap_python

./: README.md  mkdocs.yml  pyproject.toml
complexheatmap/: __init__.py  _color.py  _data.py  _globals.py  _registry.py  _utils.py  annotation_function.py  annotation_functions.py  color_mapping.py  decorate.py  density_heatmap.py  grid_extensions.py  heatmap.py  heatmap_3d.py  heatmap_annotation.py  heatmap_list.py  legends.py  oncoprint.py  single_annotation.py  upset.py
complexheatmap/resources/: color_space_comparison.csv  dmr_cgi_anno.csv  dmr_dist_tss.csv  dmr_gene_anno.csv  dmr_label.txt  dmr_mat_enrich_gf.csv  dmr_mat_enrich_st.csv  dmr_mat_pct_st.csv  dmr_mean_meth.csv  dmr_n_corr.csv  dmr_n_gr.csv  gene_expression.csv  gene_expression_backup.rds  genome_level_char_mat.csv  genome_level_chr.csv  genome_level_markers.csv  genome_level_num_mat.csv  genome_level_subgroup.csv  genome_level_v.csv  gr.csv  measles.csv  meth_anno.csv  (+15 more)
docs/: api.md  index.md
tests/: conftest.py  test_annotation.py  test_color.py  test_color_mapping.py  test_data.py  test_decorate.py  test_density_heatmap.py  test_globals.py  test_heatmap.py  test_heatmap_3d.py  test_heatmap_list.py  test_legends.py  test_oncoprint.py  test_upset.py  test_utils.py
tutorials/: 02-single_heatmap-v2.ipynb  03-heatmap_annotations.ipynb  04-a_list_of_heatmaps.ipynb  05-legends.ipynb  06-heatmap_decoration.ipynb  07-oncoprint.ipynb  08-upset-v2.ipynb  10-integrate-v2.ipynb  11-other-high-level-plots.ipynb  12-3d-heatmap.ipynb  13-genome-level-heatmap-v2.ipynb  14-examples-v2.ipynb  15-other-tricks.ipynb
